2002-01-31  Braden McDaniel  <braden@endoframe.com>

        * Minor fix to JDK/JNI autoconf macro: just check for the
          "client" libjvm, not "classic".

2002-01-28  S. K. Bose  <bose@pavan.barc.ernet.in>

        * In "NodeLOD", accumulated modelview matrix within 
          rendercontext is used to find the viewer position in local
          coordinate system.

        * Fixed the "step" method in ViewerOpenGL to take care the "Z"
          values.

        * "getPosition" method is removed from ViewerOpenGL. This is
          no longer needed.
 
2002-01-25  Thomas Flynn <tflynn@users.sourceforge.net>

        * Update OpenVRML autoconf macros to use namespaces.

2002-01-22  Braden McDaniel  <braden@endoframe.com>

        * Fixed "ScriptJDK.cpp" to account for identifier changes to
          FieldValue::Type.

        * Fixed some errors introduced through unduly aggressive use of
          "find & replace".

2002-01-22  S. K. Bose  <bose@pavan.barc.ernet.in>

        * Implement three more methods (det3, det4 and getTransform) in
          VrmlMatrix.

        * In ProximitySensor, getPosition and getOrientation are
          replaced by getTransform method of VrmlMatrix to find
          out position and orientation of Viewer w.r.t local coordinate
          system. Fix the bug #466786. Thanks to Javier Taibo 
          <http://sourceforge.net/mailarchive/forum.php?thread_id=394826&forum_id=7147>
          for pointing it.

        * getOrientation method is removed from ViewerOpenGL. This is
          no longer needed.

        * "build_quaternion" is shifted from MathUtils to VrmlMatrix. 

2002-01-20  Braden McDaniel  <braden@endoframe.com>

        * Updated documentation for configure options in README.

        * Changed FieldValue::FieldType to FieldValue::Type.

        * Changed FieldValue::Type enumerants to use interCaps rather
          than UPPER_CASE.

2002-01-14  S. K. Bose  <bose@pavan.barc.ernet.in>
