@@ -41,11 +41,11 @@ IDE_PROJECT_FILES = \
         ide-projects/Windows/VisualC6/tplib/antlr/libantlr.dsw \
         ide-projects/Windows/VisualC6/tplib/antlr/Makefile.vc6
 
-EXTRA_DIST = vrml.m4 vrml-gl.m4 Doxyfile.in openvrml.spec.in lookat.xpm \
-$(IDE_PROJECT_FILES)
+EXTRA_DIST = Doxyfile.in openvrml.pc.in openvrml-gl.pc.in openvrml.spec.in \
+lookat.xpm $(IDE_PROJECT_FILES)
 
-m4datadir = $(datadir)/aclocal
-m4data_DATA = vrml.m4 vrml-gl.m4
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = openvrml.pc openvrml-gl.pc
 
 pixmapdatadir = $(datadir)/pixmaps
 pixmapdata_DATA = lookat.xpm
