@@ -1,0 +1,5 @@
+Name: openvrml-gl
+Description: OpenGL renderer for OpenVRML.
+Version: @VERSION@
+Libs: -L@libdir@ @GLUT_LIBS@ @GL_LIBS@ @X_PRE_LIBS@ @X_LIBS@ @X_EXTRA_LIBS@
+Cflags: -I@includdir@ @X_CFLAGS@
